--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
   "dependencies": {
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "recharts": "^3.5.0"
+    "recharts": "^3.5.0",
+    "react-markdown": "9.0.1",
+    "remark-math": "6.0.0",
+    "rehype-katex": "7.0.0",
+    "clsx": "2.1.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
